deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exo-dashboard
spec:
  selector:
    matchLabels:
      app: exo-dashboard
  template:
    metadata:
      labels:
        app: exo-dashboard
    spec:
      containers:
        - name: exo-dashboard
          image: 108051779495.dkr.ecr.us-east-1.amazonaws.com/exo-dashboard:latest
          ports:
            - containerPort: 5173
